--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:ems="15"
         android:hint="이름을 입력하세요."
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/tv_name"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
@@ -33,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
+
         android:textColor="@color/red"
         app:layout_constraintEnd_toEndOf="@+id/et_name"
         app:layout_constraintStart_toStartOf="@+id/et_name"
@@ -53,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="15"
+        android:inputType="text"
         android:hint="아이디를 입력하세요."
         app:layout_constraintEnd_toEndOf="@+id/tv_id"
         app:layout_constraintStart_toStartOf="@+id/tv_id"
